fix: Chapter 05の手動修正をコミット

--- a/docs-site/docs/05_ローカル変数.md
+++ b/docs-site/docs/05_ローカル変数.md
@@ -172,6 +172,7 @@ locals {
 ```
 
 **これは何？**
+
 定数を定義しています。マジックストリング（文字列直書き）を避けるためです。
 
 **悪い例**：
@@ -195,7 +196,7 @@ if (var.connectivity_type == local.const.connectivity.hub_and_spoke_vnet) {
 - `hub_and_spoke_vnet`：Hub-and-Spoke使う
 - `none`：ネットワーク作らない
 
-プログラミングの`enum`みたいなもん。
+プログラミングの`const`みたいなもん。
 
 ---
 
@@ -210,6 +211,7 @@ locals {
 ```
 
 **これは何？**
+
 `connectivity_type`の値を見て、フラグを作っています。
 
 ### connectivity_enabled
@@ -315,6 +317,7 @@ locals {
 ```
 
 **これは何？**
+
 リソースグループを先に作ってから、ネットワークを作るための仕組み。
 
 ### Terraformの依存関係
@@ -408,6 +411,7 @@ merge(
 ```
 
 **なんでこんなことするの？**
+
 - `resource_groups`を含めて依存関係を作る
 - でも最終的には`vnets`だけほしい
 
@@ -435,11 +439,13 @@ locals {
 ```
 
 **これは何？**
+
 管理グループにポリシーを割り当てる前に、他のリソースを先に作るための仕組み。
 
 ### なんで必要なの？
 
 **シナリオ**：
+
 1. Log Analyticsワークスペースを作る
 2. ポリシーで「全リソースはLog Analyticsにログ送信」を設定
 
@@ -485,6 +491,7 @@ locals {
 ```
 
 **やってること**：
+
 1. `module.config`から管理グループの設定を取得
 2. `dependencies`（依存関係）を追加
 3. マージして最終設定を作る
@@ -777,6 +784,7 @@ Outputs:
 ## まとめ
 
 **locals.tfの役割**：
+
 1. **定数定義**：マジックストリングを避ける
 2. **条件判定**：フラグを作って可読性向上
 3. **依存関係**：リソースの作成順序を制御
