fix: Chapter 00の手動修正をコミット

--- a/docs-site/docs/00_はじめに.md
+++ b/docs-site/docs/00_はじめに.md
@@ -1,10 +1,10 @@
-# 00. はじめに - このプロジェクトの全体像
+# 00. はじめに - ランディングゾーンの全体像
 
 ## この教科書の使い方
 
 ### 📚 学習スタイル
 
-この教科書は、実際のコードを見ながら読むことを強く推奨します。
+この教科書は、実際のコードを見ながら読むこと想定しています。
 
 !!! tip "推奨: GitHubで見る"
     教科書を読みながら、ブラウザで https://github.com/shuhei0720org01/alz-mgmt を開いておきましょう。
@@ -27,7 +27,7 @@
 
 - 教科書で具体的なファイル名（`platform-landing-zone.auto.tfvars`など）が出てきたら、GitHubまたはVSCodeでそのファイルを開く
 
-**3. コードを理解する**（重要）
+**3. コードを理解する**
 
 - コードの構造や設定値を確認する
 - コメントを読んで設計意図を理解する
@@ -41,7 +41,7 @@
 企業向けのAzure環境を構築するためのTerraformコードです。
 
 「Landing Zone」は飛行機の着陸帯って意味です。
-実際、そのイメージで合っていて、
+実際にイメージを照らし合わせ当て見ましょう。
 
 飛行機が安全に着陸するためには、滑走路だけじゃなくて：
 
