docs: Chapter 06-07の手動修正をコミット

--- a/docs-site/docs/06_設定テンプレート.md
+++ b/docs-site/docs/06_設定テンプレート.md
@@ -6,12 +6,12 @@
 
 **例えるなら**：
 
-- **Mad Libs**（穴埋めゲーム）みたいなやつ
+- 穴埋めゲーム的な感じ
 - テンプレート：「今日の天気は`{{weather}}`だよ」
 - 変数：`weather = "晴れ"`
 - 結果：「今日の天気は晴れだよ」
 
-このモジュールは、設定ファイル内の`{{xxx}}`を実際の値に置き換えてくれるんだ。
+このモジュールは、設定ファイル内の`{{xxx}}`を実際の値に置き換えてくれます。
 
 ---
 
@@ -65,6 +65,7 @@ modules/config-templating/
 ```
 
 **流れ**：
+
 1. `variables.tf`：入力を受け取る
 2. `data.tf`：Azureリージョン情報を取得
 3. `locals.config.tf`：テンプレートを処理
@@ -111,7 +112,7 @@ variable "custom_replacements" {
 }
 ```
 
-Chapter 3で見た`custom_replacements`をそのまま受け取るんだ。
+Chapter 3で見た`custom_replacements`をそのまま受け取る。
 
 ### inputs
 
@@ -141,7 +142,8 @@ module "regions" {
 }
 ```
 
-**何をしているのでしょうか？**
+**何をしているの？**
+
 Azureの全リージョン情報を取得しています。
 
 **取得できる情報**：
@@ -165,7 +167,8 @@ module.regions.regions_by_name["japaneast"].short_name  # ←"jpe"
 data "azurerm_client_config" "current" {}
 ```
 
-**何をしているのでしょうか？**
+**何をしている？**
+
 現在のAzure接続情報を取得しています。
 
 **取得できる情報**：
@@ -190,7 +193,8 @@ locals {
 }
 ```
 
-**何をしているのでしょうか？**
+**何をしている？**
+
 リストをマップに変換しています。
 
 **例**：
@@ -246,6 +250,7 @@ coalesce(値1, 値2, 値3, 値4)
 ```
 
 **優先順位**：
+
 1. **ユーザーの上書き**：手動で指定した値
 2. **geo_code**：`jp`、`us`みたいな地理コード
 3. **short_name**：`jpe`、`jpw`みたいな短縮名
@@ -316,6 +321,7 @@ locals {
 ```
 
 **やってること**：
+
 全ての組み込み置換ルールを1つのマップにまとめてる。
 
 **結果**（例）：
@@ -354,20 +360,22 @@ locals {
 ```
 
 **何これ？**
+
 めちゃくちゃ複雑だけど、やってることは単純。
 
 **問題**：
+
 `templatestring()`関数は文字列しか受け取れない。
 でも、`var.custom_replacements.names`はオブジェクト。
 
 **解決策**：
+
 1. **JSON化**：オブジェクト → JSON文字列
 2. **テンプレート処理**：`{{xxx}}`を置換
 3. **オブジェクトに戻す**：JSON文字列 → オブジェクト
 
-#### 詳細な流れ
 
-**🤔 その前に: なぜ jsonencode/jsondecode を使うのか？**
+**🤔  なぜ jsonencode/jsondecode を使うのか？**
 
 **問題**: Terraformのオブジェクトをそのまま文字列操作できない
 
@@ -406,6 +414,8 @@ result = jsondecode(replaced)
 
 ---
 
+#### 詳細な流れ
+
 ##### 1. custom_names_json
 ```hcl
 custom_names_json = replace(replace(tostring(jsonencode(...)), "\"true\"", "{{string_true}}"), "\"false\"", "{{string_false}}")
@@ -429,6 +439,7 @@ var.custom_replacements.names = {
 ```
 
 **なんで保護？**
+
 `templatestring()`が`true`/`false`を文字列`"true"`/`"false"`に変換してしまうためです。
 それを防ぐために一時的に`{{string_true}}`に変えてる。
 
@@ -591,6 +602,7 @@ locals {
 ```
 
 **流れ**：
+
 1. **JSON化**：各設定をJSON文字列に
 2. **テンプレート処理**：`{{xxx}}`を置換
 3. **オブジェクトに戻す**：JSON → オブジェクト
@@ -808,6 +820,7 @@ vnet_id = "{{rg_id}}/providers/.../virtualNetworks/vnet"
 ## まとめ
 
 **config-templatingモジュールの役割**：
+
 1. **リージョン情報の正規化**：`japaneast` → `jp`
 2. **組み込み置換の作成**：リージョン、サブスクリプションID
 3. **カスタム置換の段階的処理**：名前 → RG ID → リソースID
