docs: Chapter 07 v2を追加（リソースグループ完全解説）

--- a/docs-site/docs/06_設定テンプレート.md
+++ b/docs-site/docs/06_設定テンプレート.md
@@ -1,4 +1,4 @@
-# 06. 設定テンプレート - 魔法の置換エンジン完全解説
+# 06. 設定テンプレート - パラメーター置換エンジン完全解説
 
 !!! info "この章で学ぶこと"
     `modules/config-templating/`モジュールの全ファイルを完全解説します：
@@ -11,7 +11,6 @@
     6. outputs.tf - 処理結果の出力
     7. 実践：カスタム変数の追加方法
 
-    **このモジュールは省略なしで全コード解説します。**
 
 ---
 
@@ -56,6 +55,7 @@
     ```
 
 **問題点：**
+
 - リージョンを変更したい時、全部書き直し
 - 3リージョン、4リージョンに増やす時、大変
 - コピペミスが起きやすい
@@ -106,7 +106,7 @@ graph TB
 
 まずは基本設定から。
 
-```hcl title="modules/config-templating/terraform.tf（完全版）"
+```hcl title="modules/config-templating/terraform.tf"
 terraform {
   required_version = "~> 1.12"
   required_providers {
@@ -222,6 +222,7 @@ starter_locations = ["japaneast", "japanwest"]
 ```
 
 **使われ方：**
+
 - `starter_location_01` = "japaneast"
 - `starter_location_02` = "japanwest"
 
@@ -305,6 +306,7 @@ variable "root_parent_management_group_id" {
 **役割：** 管理グループの最上位親ID
 
 **デフォルト動作：**
+
 - 空文字`""`の場合 → テナントルートグループを使用
 - 指定した場合 → その管理グループの配下に作成
 
@@ -386,6 +388,7 @@ inputs = {
 ```
 
 **`any`型の意味：**
+
 どんな構造でもOK。このモジュールはJSON化してテンプレート置換するだけなので。
 
 ### 変数10: enable_telemetry
@@ -410,6 +413,7 @@ DESCRIPTION
 - `false`: 送信しない
 
 **`nullable = false`の意味：**
+
 `null`は許可しない。必ず`true`か`false`を指定。
 
 ---
@@ -418,7 +422,7 @@ DESCRIPTION
 
 置換に使うデータを集めます。
 
-```hcl title="modules/config-templating/data.tf（完全版：8行）"
+```hcl title="modules/config-templating/data.tf"
 module "regions" {
   source           = "Azure/avm-utl-regions/azurerm"
   version          = "0.9.2"
@@ -441,6 +445,7 @@ module "regions" {
 ```
 
 **何してる？**  
+
 Azureの全リージョン情報を提供するモジュール。
 
 **取得できる情報：**
@@ -455,6 +460,7 @@ module.regions.regions_by_name["japaneast"] = {
 ```
 
 **パラメータ：**
+
 - `use_cached_data = false`: キャッシュを使わず最新データを取得
 - `enable_telemetry`: 変数から受け継ぐ
 
@@ -491,7 +497,7 @@ data.azurerm_client_config.current = {
 
 ## Part 4: locals.config.tf - 置換ロジックの核心
 
-ここがこのモジュールの心臓部です。**75行すべて解説します。**
+ここがこのモジュールの心臓部です。
 
 ### 全体の処理フロー
 
@@ -539,6 +545,7 @@ local.starter_locations = {
 ```
 
 **`format("%02d", i + 1)`の意味：**
+
 - `i`は0始まり
 - `i + 1`で1始まりに
 - `%02d`で2桁ゼロ埋め（01, 02, ...）
@@ -749,6 +756,7 @@ locals {
 リソースグループのフルパスを生成。
 
 **ステップ4と同じパターン：**
+
 JSON化 → ブール値保護 → テンプレート置換 → ブール値復元 → JSON解析
 
 **具体例：**
@@ -765,6 +773,7 @@ var.custom_replacements.resource_group_identifiers = {
 ```
 
 **前のステップで作った変数を使える：**
+
 - `$${subscription_id_connectivity}` ← built_in_replacements
 - `$${connectivity_resource_group_name}` ← custom_names
 
@@ -820,6 +829,7 @@ var.custom_replacements.resource_identifiers = {
 ```
 
 **前のステップで作った変数を使える：**
+
 - `$${connectivity_rg_id}` ← custom_resource_group_identifiers
 - `$${firewall_name}` ← custom_names
 
@@ -947,6 +957,7 @@ output "custom_replacements" {
 ```
 
 **用途：**
+
 - デバッグ：どんな変数が使えるか確認
 - 他モジュールへの引き継ぎ
 
@@ -993,6 +1004,7 @@ output "outputs" {
 ### シナリオ: 環境名を追加したい
 
 **要件：**
+
 - `dev`, `stg`, `prod`のような環境名をリソース名に含めたい
 - 例: `rg-connectivity-dev-japaneast`
 
@@ -1125,16 +1137,6 @@ graph TB
 | **coalesceのフォールバック** | 4段階の優先順位で短縮名を決定 |
 | **for式の活用** | すべての設定に一括処理 |
 
-### ファイル別行数まとめ
-
-| ファイル | 行数 | 役割 |
-|---------|------|------|
-| terraform.tf | 8行 | バージョン設定 |
-| variables.tf | 59行 | 入力変数定義 |
-| data.tf | 8行 | データ取得 |
-| locals.config.tf | 75行 | 置換処理 |
-| outputs.tf | 6行 | 結果出力 |
-| **合計** | **156行** | **全体** |
 
 ---
 
