Chapter 07 v3修正: Part 5にロックとRBAC実践追加、Part 6-7削除

--- a/docs-site/docs/07_リソースグループv3.md
+++ b/docs-site/docs/07_リソースグループv3.md
@@ -213,7 +213,7 @@ providers = {
 
 ---
 
-## Part 3: 公式モジュールの内部構造（完全解説）
+## Part 3: 公式モジュールの内部構造
 
 ### 3-1: モジュール全体像
 
@@ -604,17 +604,17 @@ terraform apply
 
 ---
 
-## Part 5: 実践 - 新しいリソースグループの追加
+## Part 5: 実践 - 新しいリソースグループの追加とカスタマイズ
 
-### シナリオ: セキュリティ用のリソースグループ追加
+### パターン1: 基本的なリソースグループ追加
 
 **要件：**
 
 - 名前: `rg-security-japaneast`
 - リージョン: `japaneast`
-- 削除防止ロック: 有効
+- カスタムタグ: 追加
 
-### 手順1: 設定ファイルに追加
+#### 手順1: 設定ファイルに追加
 
 ```hcl title="platform-landing-zone.auto.tfvars"
 connectivity_resource_groups = {
@@ -633,7 +633,7 @@ connectivity_resource_groups = {
 }
 ```
 
-### 手順2: Terraform実行
+#### 手順2: Terraform実行
 
 ```bash
 terraform plan
@@ -652,7 +652,7 @@ terraform plan
 terraform apply
 ```
 
-### 手順3: 確認
+#### 手順3: 確認
 
 ```bash
 az group show --name rg-security-japaneast
@@ -673,167 +673,236 @@ az group show --name rg-security-japaneast
 
 ---
 
-## Part 6: よくあるパターン
+### パターン2: 削除防止ロック付きリソースグループ
 
-### パターン1: 削除防止ロックの追加
+**要件：**
 
-```hcl title="ロック付きリソースグループ"
+- 名前: `rg-production-japaneast`
+- リージョン: `japaneast`
+- 削除防止ロック: 有効
+
+!!! warning "main.resource.groups.tf の修正が必要"
+    現在の`main.resource.groups.tf`では`lock`パラメータを渡していません。
+    
+    以下の手順でmain.resource.groups.tfを修正してから、設定ファイルを変更します。
+
+#### 手順1: main.resource.groups.tfを修正
+
+```hcl title="main.resource.groups.tf（修正前）"
 module "resource_groups" {
   source  = "Azure/avm-res-resources-resourcegroup/azurerm"
   version = "0.2.1"
 
-  name     = "rg-production-japaneast"
-  location = "japaneast"
-  
-  lock = {
-    kind = "CanNotDelete"
-    name = "production-lock"
+  for_each = { for key, value in module.config.outputs.connectivity_resource_groups : key => value if try(value.settings.enabled, true) }
+
+  name             = each.value.name
+  location         = each.value.location
+  enable_telemetry = var.enable_telemetry
+  tags             = try(each.value.tags, null) == null ? module.config.outputs.tags : each.value.tags
+
+  providers = {
+    azurerm = azurerm.connectivity
   }
 }
 ```
 
-**作成されるリソース：**
+**修正後：**
+
+```hcl title="main.resource.groups.tf（修正後）"
+module "resource_groups" {
+  source  = "Azure/avm-res-resources-resourcegroup/azurerm"
+  version = "0.2.1"
+
+  for_each = { for key, value in module.config.outputs.connectivity_resource_groups : key => value if try(value.settings.enabled, true) }
+
+  name             = each.value.name
+  location         = each.value.location
+  enable_telemetry = var.enable_telemetry
+  tags             = try(each.value.tags, null) == null ? module.config.outputs.tags : each.value.tags
+  
+  # ロックパラメータを追加
+  lock = try(each.value.lock, null)
+
+  providers = {
+    azurerm = azurerm.connectivity
+  }
+}
+```
+
+#### 手順2: 設定ファイルにロックを追加
+
+```hcl title="platform-landing-zone.auto.tfvars"
+connectivity_resource_groups = {
+  production = {
+    name     = "rg-production-$${starter_location_01}"
+    location = "$${starter_location_01}"
+    lock = {
+      kind = "CanNotDelete"
+      name = "production-lock"
+    }
+  }
+}
+```
+
+#### 手順3: Terraform実行
+
+```bash
+terraform plan
+```
+
+**出力：**
 
 ```text
-+ azurerm_resource_group.this
-+ azurerm_management_lock.this
-```
-
-### パターン2: RBAC権限の設定
-
-```hcl title="権限付きリソースグループ"
-module "resource_groups" {
-  source  = "Azure/avm-res-resources-resourcegroup/azurerm"
-  version = "0.2.1"
-
-  name     = "rg-app-japaneast"
-  location = "japaneast"
-  
-  role_assignments = {
-    developer = {
-      role_definition_id_or_name = "Contributor"
-      principal_id               = "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
-    }
-    reader = {
-      role_definition_id_or_name = "Reader"
-      principal_id               = "yyyyyyyy-yyyy-yyyy-yyyy-yyyyyyyyyyyy"
-    }
-  }
-}
-```
-
-### パターン3: 条件付き作成
-
-```hcl title="環境によって有効/無効"
-connectivity_resource_groups = {
-  optional_rg = {
-    name     = "rg-optional-japaneast"
++ module.resource_groups["production"]
+  + azurerm_resource_group.this
+    name     = "rg-production-japaneast"
     location = "japaneast"
-    settings = {
-      enabled = false  # 無効化
-    }
+  
+  + azurerm_management_lock.this[0]
+    lock_level = "CanNotDelete"
+    name       = "production-lock"
+```
+
+```bash
+terraform apply
+```
+
+#### 手順4: ロックの確認
+
+```bash
+az lock list --resource-group rg-production-japaneast
+```
+
+**出力：**
+
+```json
+[
+  {
+    "id": "/subscriptions/.../resourceGroups/rg-production-japaneast/providers/Microsoft.Authorization/locks/production-lock",
+    "level": "CanNotDelete",
+    "name": "production-lock",
+    "notes": "Cannot delete the resource or its child resources."
   }
-}
+]
 ```
 
 ---
 
-## Part 7: トラブルシューティング
+### パターン3: RBAC権限付きリソースグループ
 
-### 問題1: リソースグループが作成されない
+**要件：**
 
-**原因:**
+- 名前: `rg-app-japaneast`
+- リージョン: `japaneast`
+- 開発者にContributor権限
+- 閲覧者にReader権限
 
-`settings.enabled = false`になっている。
+!!! warning "main.resource.groups.tf の修正が必要"
+    `role_assignments`パラメータも現在は渡していません。
 
-**確認：**
+#### 手順1: main.resource.groups.tfを修正
 
-```hcl
+```hcl title="main.resource.groups.tf（修正後）"
+module "resource_groups" {
+  source  = "Azure/avm-res-resources-resourcegroup/azurerm"
+  version = "0.2.1"
+
+  for_each = { for key, value in module.config.outputs.connectivity_resource_groups : key => value if try(value.settings.enabled, true) }
+
+  name             = each.value.name
+  location         = each.value.location
+  enable_telemetry = var.enable_telemetry
+  tags             = try(each.value.tags, null) == null ? module.config.outputs.tags : each.value.tags
+  
+  # ロックパラメータを追加
+  lock = try(each.value.lock, null)
+  
+  # RBAC権限パラメータを追加
+  role_assignments = try(each.value.role_assignments, {})
+
+  providers = {
+    azurerm = azurerm.connectivity
+  }
+}
+```
+
+#### 手順2: Principal IDを取得
+
+開発者と閲覧者のPrincipal IDを取得します。
+
+```bash
+# ユーザーのPrincipal ID取得
+az ad user show --id developer@example.com --query id -o tsv
+
+# サービスプリンシパルのPrincipal ID取得
+az ad sp show --id <app-id> --query id -o tsv
+```
+
+#### 手順3: 設定ファイルに権限を追加
+
+```hcl title="platform-landing-zone.auto.tfvars"
 connectivity_resource_groups = {
-  my_rg = {
-    name     = "rg-test-japaneast"
-    location = "japaneast"
-    settings = {
-      enabled = false  # ← これが原因
+  app = {
+    name     = "rg-app-$${starter_location_01}"
+    location = "$${starter_location_01}"
+    role_assignments = {
+      developer = {
+        role_definition_id_or_name = "Contributor"
+        principal_id               = "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
+        description                = "開発者権限"
+      }
+      reader = {
+        role_definition_id_or_name = "Reader"
+        principal_id               = "yyyyyyyy-yyyy-yyyy-yyyy-yyyyyyyyyyyy"
+        description                = "閲覧者権限"
+      }
     }
   }
 }
 ```
 
-**解決：**
+#### 手順4: Terraform実行
 
-```hcl
-settings = {
-  enabled = true  # 有効化
-}
+```bash
+terraform plan
 ```
 
-### 問題2: 名前のバリデーションエラー
-
-**エラー：**
+**出力：**
 
 ```text
-Error: The resource group name must meet the following requirements:
-- Between 1 and 90 characters long.
-- Can only contain Alphanumerics, underscores, parentheses, hyphens, periods.
-- Cannot end in a period
-```
-
-**原因:**
-
-リソースグループ名が規則に違反。
-
-**解決：**
-
-```hcl
-# NG例
-name = "rg-test."  # ピリオドで終わっている
-
-# OK例
-name = "rg-test-japaneast"
-```
-
-### 問題3: タグが反映されない
-
-**原因:**
-
-優先順位を理解していない。
-
-**動作：**
-
-```hcl
-# リソースグループ固有のタグ（優先）
-connectivity_resource_groups = {
-  my_rg = {
-    name     = "rg-test-japaneast"
++ module.resource_groups["app"]
+  + azurerm_resource_group.this
+    name     = "rg-app-japaneast"
     location = "japaneast"
-    tags = {
-      custom = "value"  # ← これが優先
-    }
-  }
-}
-
-# グローバルタグ（次点）
-tags = {
-  environment = "production"
-}
+  
+  + azurerm_role_assignment.this["developer"]
+    principal_id         = "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
+    role_definition_name = "Contributor"
+    scope                = "/subscriptions/.../resourceGroups/rg-app-japaneast"
+  
+  + azurerm_role_assignment.this["reader"]
+    principal_id         = "yyyyyyyy-yyyy-yyyy-yyyy-yyyyyyyyyyyy"
+    role_definition_name = "Reader"
+    scope                = "/subscriptions/.../resourceGroups/rg-app-japaneast"
 ```
 
-**結果：**
-
-```json
-{
-  "custom": "value"
-}
+```bash
+terraform apply
 ```
 
-**グローバルタグも含めたい場合：**
+#### 手順5: 権限の確認
 
-```hcl
-tags = merge(
-  var.global_tags,
-  { custom = "value" }
-)
+```bash
+az role assignment list --resource-group rg-app-japaneast --output table
+```
+
+**出力：**
+
+```text
+PrincipalName          Role         Scope
+---------------------  -----------  ---------------------------------------
+developer@example.com  Contributor  /subscriptions/.../rg-app-japaneast
+viewer@example.com     Reader       /subscriptions/.../rg-app-japaneast
 ```
 
 ---
